fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -23,16 +23,6 @@ code {
   background: transparent;
 }
 
-.search {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  overflow-x: hidden;
-}
-
-.search__input-wrapper {
-  padding: 7px;
-}
-
 .app {
   grid-template-rows: 1fr auto;
   display: grid;
@@ -78,9 +68,20 @@ code {
   background: #1890ff;
 }
 
+.search {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  overflow: hidden;
+}
+
+.search__input-wrapper {
+  padding: 7px;
+}
+
 .station {
   display: grid;
   grid-template-rows: auto 1fr;
+  overflow: hidden;
 }
 
 .station__header {
@@ -96,6 +97,6 @@ code {
   font-weight: 300;
 }
 
-.station_accordion {
-  overflow-x: hidden;
+.station__accordion {
+  overflow: scroll;
 }
